--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="button-game">
         <button class="get-signal" id="get-signal">GET SIGNAL</button>
         <button class="get-signal-two deactivate" id="get-signal-two">GET SIGNAL</button>
-        <a target="_blank" href="https://1warlo.top/?p=jpeb" class="game-here">GAME HERE</a>
+        <a target="_blank" href="https://1wzjvm.top/?p=jpeb" class="game-here">GAME HERE</a>
       </div>
     </div>
   </div>
